# tag-translation-assistant

./: .gitignore  README.md  config.toml  pyproject.toml
tag_translation_assistant/: __main__.py  config.py  danbooru.py  deepl.py  google.py  pixiv.py  romanize.py
